--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <h1>ZCalc</h1>
   </header>
-  <img src="https://raw.githubusercontent.com/RacyRiyaz/ZCalc/main/BGSB.png" alt="">
+ <!-- <img src="https://raw.githubusercontent.com/RacyRiyaz/ZCalc/main/BGSB.png" alt=""> -->
   <main>
     <div id="sipCalculator" class="tabcontent">
       <div class="calculator">
