--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <input type="number" id="swpTimePeriod" placeholder="Enter time period" value="10">
           <label for="swpMonthlyWithdrawalAmount">Monthly Withdrawal Amount:</label>
           <input type="text" id="swpMonthlyWithdrawalAmount" placeholder="Enter withdrawal amount" value="10,000" oninput="this.value = formatNumberWithCommas(this.value)">
-          <button onclick="calculateSWP()">Calculate SWP</button>
+          <button onclick="calculateSWP()">Calculate</button>
           <div id="swpResult"></div>
         </div>
       </div>
