--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
         </div>
       </div>
     </main>
+    <footer>
+      <div class="bottom-footer">
+          <p> Copyright &copy; <a href="https://racyriyaz.github.io/me/" style="text-decoration: none">Mohamed Riyaz</a> - All rights reserved </p>
+    </footer>
     <script src="sipScript.js"></script>
   </body>
 </html>
